WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132359
[iOS] -[WebHTMLView selectionImageForcingBlackText:] returns blank image on iOS
https://bugs.webkit.org/show_bug.cgi?id=132359
Summary
[iOS] -[WebHTMLView selectionImageForcingBlackText:] returns blank image on iOS
Sam Weinig
Reported
2014-04-29 15:00:58 PDT
[iOS] -[WebHTMLView selectionImageForcingBlackText:] returns blank image on iOS
Attachments
Patch
(6.33 KB, patch)
2014-04-29 15:03 PDT
,
Sam Weinig
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2014-04-29 15:03:59 PDT
Created
attachment 230425
[details]
Patch
WebKit Commit Bot
Comment 2
2014-04-29 15:06:27 PDT
Attachment 230425
[details]
did not pass style-queue: ERROR: Source/WebKit/mac/WebView/WebHTMLView.mm:6588: Tests for true/false, null/non-null, and zero/non-zero should all be done without equality comparisons. [readability/comparison_to_zero] [5] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Sam Weinig
Comment 3
2014-04-30 10:27:09 PDT
Committed
r168029
: <
http://trac.webkit.org/changeset/168029
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug