[iOS] -[WebHTMLView selectionImageForcingBlackText:] returns blank image on iOS https://bugs.webkit.org/show_bug.cgi?id=132359

Reviewed by Darin Adler.

* WebView/WebHTMLView.mm:
(imageFromRect):
(selectionImage):
(-[WebHTMLView selectionImageForcingBlackText:selectionImageForcingBlackText:]):
Bring back the old FrameSnapshottingMac code for drawing the selection image as drag code for this
is still unimplemented on iOS.

* WebView/WebView.mm:
(-[WebView initSimpleHTMLDocumentWithStyle:frame:preferences:groupName:]):
Set the page scale for "simple HTML documents" (this is already done for the all other documents),
to ensure that the snapshot is the correct size.


Canonical link: https://commits.webkit.org/150398@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168029 268f45cc-cd09-0410-ab3c-d52691b4dbfc